# galxe-raffle

./: .gitignore  .gitmodules  LICENSE.md  README.md
.github/workflows/: ci.yml  go.yml
charts/prover-service/: Chart.yaml  values.yaml
charts/prover-service/secrets/: galxe-raffle-prover-service.yaml
charts/prover-service/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml  service.yaml
contracts/: .env.example  README.md  foundry.toml  remappings.txt
contracts/broadcast/Raffle.s.sol/13505/: run-1730752044.json
contracts/deployments/: 127001.json  13505.json  1625.json  56.json
contracts/interface/: IRaffle.sol
contracts/script/: participate.s.sol
contracts/script/deploy/: GG_Raffle.s.sol  Raffle.s.sol
contracts/script/utils/: Base.s.sol
contracts/src/: GG_IRaffle.sol  GG_Raffle.sol  IRaffle.sol  Raffle.sol
contracts/test/: GGRaffle.t.sol  GG_Raffle.t.sol  README.MD  Raffle.t.sol
contracts/test/fixtures/: groth16-fixture.json
go/: Makefile  README.md  go.mod  go.sum
go/pkg/contract/: binding.go
go/pkg/prover/: prover.pb.go  prover_grpc.pb.go
go/pkg/raffle/: raffle.go  raffle_test.go
prover-service/: Cargo.toml  Dockerfile  build.rs
prover-service/elf/: riscv32im-succinct-zkvm-elf
prover-service/proto/: prover.proto
prover-service/src/: lib.rs  service.rs
prover-service/src/utils/: hex.rs
zk/: .env.example  Cargo.toml  README.md
zk/elf/: galxe-raffle  riscv32im-succinct-zkvm-elf
zk/fixtures/: README.md  groth16-1000-10-82e8b6bbf24681c9d3c928f988aa6eef88f41f164e5df290e3dca3b8f6ce3f07-fixture.json  groth16-1000-900-82e8b6bbf24681c9d3c928f988aa6eef88f41f164e5df290e3dca3b8f6ce3f07-fixture.json  plonk-100-10-82e8b6bbf24681c9d3c928f988aa6eef88f41f164e5df290e3dca3b8f6ce3f07-fixture.json
zk/lib/: Cargo.toml
zk/lib/src/: raffle.rs
zk/program/: Cargo.toml
zk/program/src/: main.rs
zk/script/: Cargo.toml
