[package]
name = "prover-service"
description = "A service for generating zero-knowledge proofs using the Prover Network"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
sp1-sdk = "3.0.0"
alloy-sol-types = "0.8.12"
tonic = "0.10"
tonic-health = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4.3"
log = "0.4.22"
env_logger = "0.11"

[build-dependencies]
tonic-build = "0.10"
