[package]
name = "prover-service"
description = "A service for generating zero-knowledge proofs using the Prover Network"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
sp1-sdk = { version = "5.2.1", default-features = false, features = ["network"] }
alloy-sol-types = "0.8.12"
tonic = { version = "0.10", features = ["gzip"] }
tonic-health = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4.3"
log = "0.4.22"
env_logger = "0.11"
prometheus = "0.13"
lazy_static = "1.4"
warp = "0.3"

[build-dependencies]
tonic-build = "0.10"
