[workspace]
members = ["lib", "program", "script"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
sp1-sdk = "5.0.1"
sp1-zkvm = "5.0.0"
sp1-helper = "5.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1.41"
hex = "0.4.3"
alloy-sol-types = "0.8.19"
sha2-v0-9-9 = { version = "0.9.9", package = "sha2" }

[patch.crates-io]
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.9.9-sp1-4.0.0" }
