[package]
name = "per-raffle-proof-script"
default-run = "per-raffle-proof-script"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "per-raffle-proof-script"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
sp1-sdk = { workspace = true }
alloy-sol-types = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
dotenv = "0.15.0"

[build-dependencies]
sp1-helper = { workspace = true }
sp1-build = "5.2.1"
